@@ -14,5 +14,9 @@ swf_SOURCES=swf-gimp.c
 swf_LDFLAGS = -no-undefined -avoid-version -module
 swf_LDADD = $(LIBGIMP_LIBS) $(SWF_LIBS)
 
+if HAVE_GIMP
 install-%: %
 	$(mkinstalldirs) $(gimpdir)
+else
+install-%: %
+endif
